Disable some warning flags for unit tests

--- a/tests/meson.build
+++ b/tests/meson.build
@@ -29,6 +29,16 @@ if not (gtest_dep.found() or gmock_dep.found())
   gmock_dep = disabler()
 endif
 
+# Disable compiler flags that generate warnings
+# from deliberately flawed unit test code.
+#
+cpp_args = []
+foreach false_positive_flag : ['-Wno-effc++', '-Wno-gnu-zero-variadic-macro-arguments']
+  if cxx.has_argument(false_positive_flag)
+    cpp_args += false_positive_flag
+  endif
+endforeach
+
 # unit tests with specific requirements
 #
 # - example  - has a failing testcase (on purpose)
@@ -36,13 +46,13 @@ endif
 #
 example = executable('example', ['example_tests.cpp', 'stubs.cpp'],
                      dependencies : [gmock_dep, gtest_dep, libmisc_dep, libloguru_dep],
-                     include_directories : incdir)
+                     include_directories : incdir, cpp_args : cpp_args)
 test('gtest example', example, 
      should_fail : true)
 
 fs_utils = executable('fs_utils', ['fs_utils_tests.cpp', 'stubs.cpp'],
                       dependencies : [gmock_dep, gtest_dep, libmisc_dep, libloguru_dep],
-                      include_directories : incdir)
+                      include_directories : incdir, cpp_args : cpp_args)
 test('gtest fs_utils', fs_utils,
      workdir : project_source_root, is_parallel : false)
 
@@ -55,9 +65,9 @@ unit_tests = [
   {'name' : 'string_utils',         'deps' : []},
   {'name' : 'setup',                'deps' : [stdcppfs_dep, libmisc_dep]},
   {'name' : 'support',              'deps' : [libmisc_dep]},
-  {'name' : 'drives',               'deps' : [dosbox_dep], 'extra_cpp': []},
-  {'name' : 'dos_files',            'deps' : [dosbox_dep], 'extra_cpp': []},
-  {'name' : 'shell_cmds',           'deps' : [dosbox_dep], 'extra_cpp': []},
+  {'name' : 'drives',               'deps' : [dosbox_dep, stdcppfs_dep], 'extra_cpp': []},
+  {'name' : 'dos_files',            'deps' : [dosbox_dep, stdcppfs_dep], 'extra_cpp': []},
+  {'name' : 'shell_cmds',           'deps' : [dosbox_dep, stdcppfs_dep], 'extra_cpp': []},
 ]
 
 foreach ut : unit_tests
@@ -65,6 +75,6 @@ foreach ut : unit_tests
   extra_cpp = ut.get('extra_cpp', ['stubs.cpp'])
   exe = executable(name, [name + '_tests.cpp'] + extra_cpp,
                    dependencies : [gmock_dep, gtest_dep, libloguru_dep] + ut.get('deps'),
-                   include_directories : incdir)
+                   include_directories : incdir, cpp_args : cpp_args)
   test('gtest ' + name, exe)
 endforeach
