--- a/tests/meson.build
+++ b/tests/meson.build
@@ -35,7 +35,7 @@ endif
 # - fs_utils - depends on files in: tests/files/
 #
 example = executable('example', ['example_tests.cpp', 'stubs.cpp'],
-                     dependencies : [gmock_dep, gtest_dep, sdl2_dep, libmisc_dep, libloguru_dep],
+                     dependencies : [gmock_dep, gtest_dep, libmisc_dep, libloguru_dep],
                      include_directories : incdir)
 test('gtest example', example, 
      should_fail : true)
@@ -52,10 +52,10 @@ test('gtest fs_utils', fs_utils,
 unit_tests = [
   {'name' : 'iohandler_containers', 'deps' : [libmisc_dep]},
   {'name' : 'rwqueue',              'deps' : [libmisc_dep]},
-  {'name' : 'soft_limiter',         'deps' : [atomic_dep, sdl2_dep, libmisc_dep]},
+  {'name' : 'soft_limiter',         'deps' : [atomic_dep, libmisc_dep]},
   {'name' : 'string_utils',         'deps' : []},
-  {'name' : 'setup',                'deps' : [stdcppfs_dep, sdl2_dep, libmisc_dep]},
-  {'name' : 'support',              'deps' : [sdl2_dep, libmisc_dep]},
+  {'name' : 'setup',                'deps' : [stdcppfs_dep, libmisc_dep]},
+  {'name' : 'support',              'deps' : [libmisc_dep]},
 ]
 
 foreach ut : unit_tests
