Disable Clang 32 bit MSYS2 builds due to pacman failure

--- a/.github/workflows/windows-meson-msys2.yml
+++ b/.github/workflows/windows-meson-msys2.yml
@@ -30,11 +30,11 @@ jobs:
             arch: x86_64
             sys: MINGW64
             max_warnings: 19
-          - name: Clang x86
-            toolchain: clang-
-            arch: i686
-            sys: CLANG32
-            max_warnings: 19
+          # - name: Clang x86
+          #   toolchain: clang-
+          #   arch: i686
+          #   sys: CLANG32
+          #   max_warnings: 19
           - name: Clang x86_64
             toolchain: clang-
             arch: x86_64
