--- a/.github/workflows/windows-meson-msys2.yml
+++ b/.github/workflows/windows-meson-msys2.yml
@@ -58,6 +58,12 @@ jobs:
         shell: msys2 {0}
     
     steps:
+      - name: Disable git line ending conversion
+        shell: powershell
+        run: |
+          git config --global core.autocrlf false
+          git config --global core.eol lf
+
       - name: Checkout repository
         uses: actions/checkout@v2
       
@@ -151,6 +157,12 @@ jobs:
         shell: msys2 {0}
    
     steps:
+      - name: Disable git line ending conversion
+        shell: powershell
+        run: |
+          git config --global core.autocrlf false
+          git config --global core.eol lf
+
       - name: Checkout repository and submodules
         uses: actions/checkout@v2
         with:
