--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,10 @@
 # github linguist 
 *.h linguist-language=C++
+*.cpp text eol=lf
+*.h text eol=lf
+*.sh text eol=lf
+*.py text eol=lf
+*.in text eol=lf
+*.diff text eol=lf
+*.txt text eol=lf
+*.ac text eol=lf
